--- a/app/productos/templates/listar.html
+++ b/app/productos/templates/listar.html
@@ -14,6 +14,7 @@
                 <th>Nombre</th>
                 <th>Precio</th>
                 <th>Imagen</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -23,6 +24,10 @@
                 <td>{{ producto.precio }}</td>
                 <td>
                     <img src="imagenes/{{ producto.imagen }}" alt="Imagen del producto" style="height: 200px; width: 200px;">
+                </td>
+                <td>
+                    <a href="/productos/update/{{ producto.id }}">Editar</a>
+                    <a href="/productos/delete/{{ producto.id }}">Eliminar</a>
                 </td>
             </tr>
             {% endfor %}
