Crud clientes completed

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
     <div class="container">
         <ul class="nav navbar-nav">
             <li>
-                <a href="">Productos</a>
+                <a href="/productos/listar">Productos</a>
             </li>
             <li>
                 <a href="">Clientes</a>
