--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,11 +1,23 @@
 <nav class="nav nav-inverse">
     <div class="container">
+        <div class="navbar-header">
+            <div class="navbar-brand">
+                {{ current_user.user_name }}
+            </div>
+        </div>
         <ul class="nav navbar-nav">
             <li>
                 <a href="/productos/listar">Productos</a>
             </li>
             <li>
-                <a href="">Clientes</a>
+                <a href="/clientes/listar">Clientes</a>
+            </li>
+            <li>
+                {% if current_user.is_authenticated %}
+                    <a href="/auth/logout">Cerrar sesión</a>
+                {% else %}
+                    <a href="/auth/login">Iniciar sesión</a>
+                {% endif %}
             </li>
         </ul>
     </div>
